--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
             <span><a href="/profile.html">Profile</a></span>
             <span><a href="#">Download Id</a></span>
             <span><a href="/upload.html">Documents</a></span>
-            <span><a href="#">Abount</a></span>
+            <span><a href="#">About</a></span>
             <span><a href="#">Contact</a></span>
             <span><a href="#">Signout</a></span>
         </nav>
