--- a/profile.html
+++ b/profile.html
@@ -14,13 +14,14 @@
     <header>
         <nav>
             <div class="logo"><img src="../images/Icons/logo.jpg" width="65px" height="75px"></div>
-            <span><a href="/homepage.html">Dashboard</a></span>
-            <span><a href="/profile.html">Profile</a></span>
-            <span><a href="#">Download Id</a></span>
-            <span><a href="/upload.html">Documents</a></span>
-            <span><a href="#">Abount</a></span>
-            <span><a href="#">Contact</a></span>
-            <span><a href="#">Signout</a></span>
+            <div class="tags">
+                <span><a href="/homepage.html" >Dashboard</a></span>
+                <span><a href="/profile.html"class="active">Profile</a></span>
+                <span><a href="/upload.html">Documents</a></span>
+                <span><a href="#">Abount</a></span>
+                <span><a href="#">Contact</a></span>
+                <span><a href="#">Signout</a></span>
+            </div>
         </nav>
     </header>
     <div class="card">
