--- a/profile.html
+++ b/profile.html
@@ -36,8 +36,8 @@
                         <h1>Himanshu Verma</h1>
                     </tr>
                     <tr>
-                        <td><strong>Employee ID</strong></td>
-                        <td>1800234</td>
+                        <td><strong>Helth ID</strong></td>
+                        <td>himanshuverma@nbhm</td>
                     </tr>
                     <tr>
                         <td><strong>Gender</strong></td>
@@ -45,15 +45,19 @@
                     </tr>
                     <tr>
                         <td><strong>Age</strong></td>
-                        <td>39</td>
+                        <td>22</td>
                     </tr>
                     <tr>
-                        <td><strong>Designation</strong></td>
-                        <td>Blogger</td>
+                        <td><strong>D.O.B</strong></td>
+                        <td>17 June 1999</td>
                     </tr>
                     <tr>
                         <td><strong>Contact</strong></td>
                         <td>+91-XXXXXXXXXX</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Addres</strong></td>
+                        <td>A27, Judges Society, Noida</td>
                     </tr>
                 </table>
             </div>
