--- a/allergies.html
+++ b/allergies.html
@@ -12,13 +12,15 @@
     <header>
         <nav>
             <div class="logo"><img src="../images/Icons/logo.jpg" width="65px" height="75px"></div>
-            <span><a href="/homepage.html">Dashboard</a></span>
-            <span><a href="/profile.html">Profile</a></span>
-            <span><a href="#">Download Id</a></span>
-            <span><a href="/upload.html">Documents</a></span>
-            <span><a href="#">About</a></span>
-            <span><a href="#">Contact</a></span>
-            <span><a href="#">Signout</a></span>
+            <div class="tags">
+                <span><a href="/homepage.html" class="active">Dashboard</a></span>
+                <span><a href="/profile.html">Profile</a></span>
+                <span><a href="/upload.html">Documents</a></span>
+                <span><a href="#">Abount</a></span>
+                <span><a href="#">Contact</a></span>
+                <span><a href="#">Signout</a></span>
+            </div>
+        </nav></span>
         </nav>
         <div class="container">
             <div class="page">
@@ -39,7 +41,7 @@
                             <h3>Ankel</h4>
                             <h5>Ankel</h5>
                         </div>
-                        <img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt="">
+                        <a href="#"><img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt=""></a>
                     </div>
                     <div class="block">
                         <img src="/images/file.jpg" style="margin: 7px; height: 40px; width: 40px; border-radius: 30px;" alt="">
@@ -47,7 +49,7 @@
                             <h3>Ankel</h4>
                             <h5>Ankel</h5>
                         </div>
-                        <img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt="">
+                        <a href="#"><img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt=""></a>
                     </div>
                     <div class="block">
                         <img src="/images/file.jpg" style="margin: 7px; height: 40px; width: 40px; border-radius: 30px;" alt="">
@@ -55,7 +57,7 @@
                             <h3>Ankel</h4>
                             <h5>Ankel</h5>
                         </div>
-                        <img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt="">
+                        <a href="#"><img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt=""></a>
                     </div>
                 </div>
             </div>
