--- a/upload.html
+++ b/upload.html
@@ -49,7 +49,7 @@
                         <h3>Ankel</h4>
                         <h5>Ankel</h5>
                     </div>
-                    <img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt="">
+                    <a href="/homepage.html"> <img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt=""></a>
                 </div>
                 <div class="block">
                     <img src="/images/file.jpg" style="margin: 7px; height: 40px; width: 40px; border-radius: 30px;" alt="">
@@ -57,7 +57,7 @@
                         <h3>Ankel</h4>
                         <h5>Ankel</h5>
                     </div>
-                    <img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt="">
+                    <a href="#"><img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt=""></a>
                 </div>
                 <div class="block">
                     <img src="/images/file.jpg" style="margin: 7px; height: 40px; width: 40px; border-radius: 30px;" alt="">
@@ -65,7 +65,7 @@
                         <h3>Ankel</h4>
                         <h5>Ankel</h5>
                     </div>
-                    <img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt="">
+                    <a href="#"><img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt=""></a>
                 </div>
             </div>
         </div>
