--- a/homepage.html
+++ b/homepage.html
@@ -27,14 +27,11 @@
     <div class="container">
         <div class="blocks">
             <div id="box" class="block1"><img src="../images/allergies.svg"><a href="/allergies.html" id="disc" class="disc1"><p>Allergies</p></a></div>
-            <div id="box" class="block2"><img src="../images/heart.svg"><a href="/allergies.html"  id="disc" class="disc2"><p>Medication</p></a></div>
-            <div id="box" class="block3"><img src="../images/clinic-history.svg"><a href="/allergies.html"   id="disc" class="disc3"><p>Clinical Vital</p></a></div>
-            <div id="box" class="block4"><img src="../images/clinic.svg"><a href="/allergies.html"   id="disc" class="disc4"><p>Near by Hospital</p></a></div>
-            <div id="box" class="block5"><img src="../images/flask.svg"><a href="/allergies.html"   id="disc" class="disc5"><p>Lab Report</p></a></div>
-            <div id="box" class="block6"><img src="../images/syringe.svg"><a href="/allergies.html"   id="disc" class="disc6"><p>Vaccination</p></a></div>
-        </div>
-        <div class="disc">
-            
+            <div id="box" class="block2"><img src="../images/heart.svg"><a href="#"  id="disc" class="disc2"><p>Medication</p></a></div>
+            <div id="box" class="block3"><img src="../images/clinic-history.svg"><a href="#"   id="disc" class="disc3"><p>Clinical Vital</p></a></div>
+            <div id="box" class="block4"><img src="../images/clinic.svg"><a href="/hospital.html"   id="disc" class="disc4"><p>Near by Hospital</p></a></div>
+            <div id="box" class="block5"><img src="../images/flask.svg"><a href="#"   id="disc" class="disc5"><p>Lab Report</p></a></div>
+            <div id="box" class="block6"><img src="../images/syringe.svg"><a href="#"   id="disc" class="disc6"><p>Vaccination</p></a></div>
         </div>
     </div>
 
