--- a/hospital.html
+++ b/hospital.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/allergies.css">
+    <link rel="stylesheet" href="css/hospital.css">
     <link rel="stylesheet" href="/css/nav.css">
-    <title>Allergies</title>
+    <title>Hospital</title>
 </head>
 <body>
     <header>
@@ -24,16 +24,23 @@
         </nav>
         <div class="container">
             <div class="page">
-                <h1>ALLERGIES</h1>
+                <h1>NEAR BY HOSPITAL</h1>
             </div>
             <div class="containt">
                 <div class="heading">
-                    <h2>10 June 2021</h2>
-                    <h4>Apollo Hospital Greater Noida</h4>
+                    <div class="distance">
+                        <h2>Distance within : </h2>
+                        <select id="km">
+                            <option value="default">10 km</option>
+                            <option value="1">20km</option>
+                            <option value="2">50km</option>
+                            <option value="3">100km</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="blocks">
                     <div class="block">
-                        <img src="/images/allergies.svg" style="margin: 7px; height: 40px; width: 40px; border-radius: 30px;" alt="">
+                        <img src="/images/mark.svg" style="margin: 12px 7px; height: 30px; width: 30px;" alt="">
                         <div class="data">
                             <h3>Ankel</h4>
                             <h5>Ankel</h5>
@@ -41,7 +48,7 @@
                         <a href="#"><img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt=""></a>
                     </div>
                     <div class="block">
-                        <img src="/images/allergies.svg" style="margin: 7px; height: 40px; width: 40px; border-radius: 30px;" alt="">
+                        <img src="/images/mark.svg" style="margin: 12px 7px; height: 30px; width: 30px;" alt="">
                         <div class="data">
                             <h3>Ankel</h4>
                             <h5>Ankel</h5>
@@ -49,7 +56,7 @@
                         <a href="#"><img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt=""></a>
                     </div>
                     <div class="block">
-                        <img src="/images/allergies.svg" style="margin: 7px; height: 40px; width: 40px; border-radius: 30px;" alt="">
+                        <img src="/images/mark.svg" style="margin: 12px 7px; height: 30px; width: 30px;" alt="">
                         <div class="data">
                             <h3>Ankel</h4>
                             <h5>Ankel</h5>
