--- a/faq.html
+++ b/faq.html
@@ -15,12 +15,11 @@
         <nav>
             <div class="logo"><img src="../images/Icons/logo.jpg" width="65px" height="75px"></div>
             <div class="tags">
-                <span><a href="/homepage.html">Dashboard</a></span>
-                <span><a href="/profile.html">Profile</a></span>
-                <span><a href="/upload.html" class="active">Documents</a></span>
+                <span><a href="#">Home</a></span>
+                <span><a href="#">Login</a></span>
                 <span><a href="#">Abount</a></span>
                 <span><a href="#">Contact</a></span>
-                <span><a href="#">Signout</a></span>
+                <span><a href="/faq.html" class="active">FAQ</a></span>
             </div>
         </nav>
     </header>
