contact page added

--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
                 <span><a href="/profile.html"class="active">Profile</a></span>
                 <span><a href="/upload.html">Documents</a></span>
                 <span><a href="#">Abount</a></span>
-                <span><a href="#">Contact</a></span>
+                <span><a href="/contact.html">Contact</a></span>
                 <span><a href="#">Signout</a></span>
             </div>
         </nav>
