--- a/upload.html
+++ b/upload.html
@@ -19,7 +19,7 @@
                 <span><a href="/profile.html">Profile</a></span>
                 <span><a href="/upload.html"class="active">Documents</a></span>
                 <span><a href="#">Abount</a></span>
-                <span><a href="#">Contact</a></span>
+                <span><a href="/contact.html">Contact</a></span>
                 <span><a href="#">Signout</a></span>
             </div>
         </nav>
