about and contact page added

--- a/faq.html
+++ b/faq.html
@@ -17,8 +17,9 @@
             <div class="tags">
                 <span><a href="#">Home</a></span>
                 <span><a href="#">Login</a></span>
-                <span><a href="#">Abount</a></span>
-                <span><a href="#">Contact</a></span>
+                <span><a href="#">Generate ID</a></span>
+                <span><a href="/about.html">About</a></span>
+                <span><a href="/contact.html">Contact</a></span>
                 <span><a href="/faq.html" class="active">FAQ</a></span>
             </div>
         </nav>
