--- a/upload.html
+++ b/upload.html
@@ -18,7 +18,7 @@
                 <span><a href="/homepage.html" >Dashboard</a></span>
                 <span><a href="/profile.html">Profile</a></span>
                 <span><a href="/upload.html"class="active">Documents</a></span>
-                <span><a href="#">Abount</a></span>
+                <span><a href="/about.html">About</a></span>
                 <span><a href="/contact.html">Contact</a></span>
                 <span><a href="#">Signout</a></span>
             </div>
