--- a/hospital.html
+++ b/hospital.html
@@ -64,8 +64,23 @@
                         <a href="#"><img src="/images/angle-right.svg" style="height: 30px; width: 35px;margin-top: 12px;" alt=""></a>
                     </div>
                 </div>
+                <div class="map">
+                    <div id="googleMap" style="width:100%;height:400px"></div>
+                </div>
             </div>
         </div>
     </header>
+    <script>
+        function myMap() {
+        var mapProp= {
+          center:new google.maps.LatLng(51.508742,-0.120850),
+          zoom:5,
+        };
+        var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+        }
+        </script>
+        
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgRypqOudHXI6CSwUExF2e183WG62nA5o&callback=myMap"></script>
+        
 </body>
 </html>
